# coin-getter-sfml

./: CMakeLists.txt  README.md
includes/: Coin.h  CoinManager.h  Enemy.h  Game.h  Globals.h  MainGameScreen.h  MainMenu.h  Player.h  ResourceManager.h
includes/controllers/: CoinManager.h  ControllerManager.h  EnemyManager.h  ResourceManager.h  SettingsManager.h
includes/core/: Game.h
includes/entities/: Coin.h  Entity.h  Player.h
includes/ui/: CoinCounter.h  DebugMenuScreen.h  HealthBar.h  Hud.h  MainGameScreen.h  MenuOption.h  OptionSelector.h  OptionsScreen.h  ResolutionOptionSelector.h  Screen.h  ScreenStyleOptionSelector.h
includes/ui/screens/: MainGameScreen.h  MainMenuScreen.h  MenuOption.h  OptionsScreen.h  PauseMenuScreen.h
includes/ui/widgets/: Hud.h  MainMenuButton.h  MenuButton.h  OptionSelector.h  ResolutionOptionSelector.h  ResumeGameButton.h  ScreenStyleOptionSelector.h  VolumeOptionSelector.h
includes/utils/: Globals.h
src/: Coin.cpp  CoinManager.cpp  Entity.cpp  Game.cpp  MainGameScreen.cpp  MainMenu.cpp  MainMenuScreen.cpp  Player.cpp  ResourceManager.cpp  main.cpp
src/controllers/: CoinManager.cpp  ControllerManager.cpp  EnemyManager.cpp  ResourceManager.cpp  SettingsManager.cpp
src/core/: Game.cpp
src/entities/: Coin.cpp  Enemy.cpp  Entity.cpp  Player.cpp
src/ui/: CoinCounter.cpp  DebugMenuScreen.cpp  HealthBar.cpp  Hud.cpp  MainGameScreen.cpp  MainMenuScreen.cpp  MenuOption.cpp  OptionSelector.cpp  OptionsScreen.cpp  ResolutionOptionSelector.cpp  ScreenStyleOptionSelector.cpp
src/ui/screens/: DebugMenuScreen.cpp  MainGameScreen.cpp  MainMenuScreen.cpp  OptionsScreen.cpp  PauseMenuScreen.cpp
src/ui/widgets/: Hud.cpp  MainMenuButton.cpp  MenuButton.cpp  MenuOption.cpp  OptionSelector.cpp  ResolutionOptionSelector.cpp  ResumeGameButton.cpp  ScreenStyleOptionSelector.cpp  VolumeOptionSelector.cpp
